--- a/css/styles.css
+++ b/css/styles.css
@@ -1052,9 +1052,10 @@ body {
     padding: 0;
     box-sizing: border-box;
     background-color: black;
-    font-family: 'Montserrat', sans-serif
+    font-family: 'Montserrat', sans-serif;
 }
 .view-available-body {
+    font-family: 'Montserrat', sans-serif;
     position: relative;
     z-index: 1; /* Ensure the body content is above the background */
     width: 100%;
@@ -1063,19 +1064,19 @@ body {
     flex-direction: column; 
     align-items: center; 
     justify-content: center;
-    text-align: center;
+    text-align: start;
     padding-top: 40vh; /* Adjust padding to make space for header */
     min-height: calc(100vh - 40vh); /* Ensure the body section takes the remaining height */
 }
 
 /* Transparent header */
 .viewavailable-page-header {
-    background: transparent; /* Make the header background fully transparent */
-    padding: 10px; /* Add padding for better appearance */
-    position: fixed; /* Fix the header at the top */
+    background: transparent;
+    padding: 10px;
+    position: fixed; 
     top: 0;
-    width: 100%; /* Ensure the header spans the full width */
-    height: 40vh; /* Set header height */
+    width: 100%; 
+    height: 30vh; 
     color: white; 
     display: flex; 
     flex-direction: column;
