--- a/css/styles.css
+++ b/css/styles.css
@@ -126,22 +126,6 @@ body {
     font-weight: normal;
 }
 
-.main-page-stadiumdetails {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-}
-
-.main-page-stadiumdetails h4{
-    font-family: 'Inter';
-    font-weight: normal;
-}
-
-.main-page-userimage {
-    width: 25px;
-    height: auto;
-}
-
 .main-page-actions {
     display: flex;
     flex-direction: column;
@@ -801,7 +785,7 @@ body {
 .login-main {
     position: relative;
     background-image: url('https://cdn.sportsbreak.com/eyJidWNrZXQiOiJwdWItc3RvcmFnZSIsImtleSI6InNwb3J0c2JyZWFrL3dwLWNvbnRlbnQvdXBsb2Fkcy8yMDE3LzA1LzE1MTEzMDAwMjQxNi1rb2JlLWJyeWFudC1uYmEtZmluYWxzLWdhbWUtNy1ib3N0b24tY2VsdGljcy12LWxvcy1hbmdlbGVzLWxha2Vycy4xMjAweDY3Mi5qcGVnIiwiZWRpdHMiOltdfQ=='), 
-                          linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.85));
+                    linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.85));
     background-size: cover; 
     background-repeat: no-repeat;
     background-blend-mode: darken;
@@ -816,7 +800,7 @@ body {
 }
 
 .login-main h1 {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat', sans-serif;
     margin-bottom: 1.5rem;
     font-weight: bold;
     font-size: 2.65rem;
@@ -824,36 +808,33 @@ body {
 
 .login-form {
     background-color: white;
-    padding: 50px;
-    padding-top: 40px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 5%;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 35%;
-    height: 30%;
+    width: 80%;
+    max-width: 700px;
     display: flex;
     flex-direction: column;
     gap: 15px;
     align-items: flex-start;
+    box-sizing: border-box;
 }
 
 .login-form label {
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     color: black;
     text-align: left;
-    margin-top: 0px;
+    margin-top: 0;
     font-size: 1.35rem;
-    margin-left: 95px;
+    width: 100%;
 }
 
-.login-form input[type="text"], .login-form input[type="password"] 
-{
-    width: 70%;
-    padding: 3px;
-    margin-top: 0px;
+.login-form input[type="text"], .login-form input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    margin-top: 0;
     font-size: 1.35rem;
-    margin: auto;
+    box-sizing: border-box;
 }
 
 .login-form input[type="submit"] {
@@ -867,19 +848,20 @@ body {
     margin-bottom: 20px;
     margin-top: 15px;
     width: 100px;
-    margin: auto;
+    align-self: center;
 }
 
-.login-form input[type="submit"]:hover{
+.login-form input[type="submit"]:hover {
     transform: scale(1.05);
 }
 
 .login-form a {
     color: black;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-size: 1rem;
-    margin: auto;
+    text-align: center;
     transition: transform 0.2s ease;
+    align-self: center;
 }
 
 .login-form a:hover {
@@ -893,7 +875,7 @@ body {
     margin-top: 20px;
 }
 
-.back-button-link-login{
+.back-button-link-login {
     display: inline-block;
     padding: 10px 20px;
     background-color: white;
@@ -908,7 +890,7 @@ body {
     margin-top: 15px;
 }
 
-.back-button-link-login:hover{
+.back-button-link-login:hover {
     transform: scale(1.05);
 }
 
@@ -916,11 +898,12 @@ body {
 
 .register-main {
     position: relative;
-    background-image: url('https://th.bing.com/th/id/R.dfd47bfa8cf6ef2ed58bab189b5e1714?rik=M%2bkRMbTe6hv0jA&riu=http%3a%2f%2fa2.espncdn.com%2fphoto%2f2014%2f0111%2fnba_dec-dunks_13.jpg&ehk=9ayDN%2f%2flJvVgMIqVCX95Y1DgQjqz%2buD%2fyej%2badPO6MM%3d&risl=&pid=ImgRaw&r=0'), 
-                          linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.85));
+    background-image: url('https://cdn.sportsbreak.com/eyJidWNrZXQiOiJwdWItc3RvcmFnZSIsImtleSI6InNwb3J0c2JyZWFrL3dwLWNvbnRlbnQvdXBsb2Fkcy8yMDE3LzA1LzE1MTEzMDAwMjQxNi1rb2JlLWJyeWFudC1uYmEtZmluYWxzLWdhbWUtNy1ib3N0b24tY2VsdGljcy12LWxvcy1hbmdlbGVzLWxha2Vycy4xMjAweDY3Mi5qcGVnIiwiZWRpdHMiOltdfQ=='), 
+                      linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.85));
     background-size: cover; 
     background-repeat: no-repeat;
     background-blend-mode: darken;
+    background-position: center;
     height: 100vh;
     width: 100%;
     color: white; 
@@ -929,23 +912,25 @@ body {
     align-items: center; 
     justify-content: center;
     text-align: center;
+    padding-top: 12.5rem;
+    padding-bottom: 15rem;
 }
 
 .register-main h1 {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat', sans-serif;
     margin-bottom: 1.5rem;
     font-weight: bold;
-    font-size: 2.2vw;
-    margin-right: 12.5rem;
+    font-size: 2.65rem;
+    margin-right: 13rem;
 }
 
 .register-loginlink {
     color: white;
-    font-family: 'Inter';
-    font-size: 0.85vw;
+    font-family: 'Inter', sans-serif;
+    font-size: 1.5rem;
     transition: transform 0.2s ease;
     margin-bottom: 1.5rem;
-    margin-right: 26.5rem;
+    margin-right: 19.5rem;
 }
 
 .register-main a:hover {
@@ -953,42 +938,38 @@ body {
 }
 
 .register-form {
-    position: relative;
     background-color: white;
-    padding-top: 40px;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-bottom: 300px;
+    padding: 5%;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 35%;
-    height: 30%;
+    width: 80%;
+    max-width: 700px;
     display: flex;
     flex-direction: column;
     gap: 15px;
     align-items: flex-start;
+    box-sizing: border-box;
 }
 
 .register-form label {
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     color: black;
     text-align: left;
-    margin-top: 0px;
-    font-size: 1.25rem;
-    margin-left: 95px;
+    margin-top: 0;
+    font-size: 1.35rem;
+    width: 100%;
 }
 
-.register-form input[type="text"], .register-form input[type="password"], .register-form textarea
-{
-    width: 70%;
-    padding: 3px;
-    margin-top: 0px;
-    font-size: 1.25vw;
-    margin: auto;
+.register-form input[type="text"], .register-form input[type="password"], .register-form textarea {
+    width: 100%;
+    padding: 10px;
+    margin-top: 0;
+    font-size: 1.35rem;
+    box-sizing: border-box;
 }
 
 .register-form input[type="submit"] {
-    padding: 15px;
+    padding: 10px;
     background-color: white;
     color: black;
     border: solid;
@@ -997,21 +978,20 @@ body {
     transition: transform 0.2s ease;
     margin-bottom: 20px;
     margin-top: 15px;
-    width: 130px;
-    margin: auto;
+    width: 150px;
+    align-self: center;
 }
 
-.register-form input[type="submit"]:hover{
+.register-form input[type="submit"]:hover {
     transform: scale(1.05);
 }
 
 .register-form textarea {
-    width: 70%;
-    height: 100px;
-    padding-top: 20px;
-    padding-bottom: 45px;
+    width: 100%;
+    height: 150px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     resize: none;
-    margin-bottom: 20px;
     font-size: 1rem;
 }
 
@@ -1022,7 +1002,7 @@ body {
     margin-top: 20px;
 }
 
-.back-button-link-register{
+.back-button-link-register {
     display: inline-block;
     padding: 10px 20px;
     background-color: white;
@@ -1037,7 +1017,6 @@ body {
     margin-top: 15px;
 }
 
-.back-button-link-register:hover{
+.back-button-link-register:hover {
     transform: scale(1.05);
 }
-
