--- a/css/styles.css
+++ b/css/styles.css
@@ -567,7 +567,7 @@ body {
     align-items: center;
 }
 
-.reservation-details-arena h2, .reservation-details-right h2, .reservation-details-left h2 { 
+.reservation-details-arena h2, .reservation-details-right h2 { 
     color: gray;
     font-size: 16px; 
     font-weight: 350;
