--- a/ProjectFolder/views/home.hbs
+++ b/ProjectFolder/views/home.hbs
@@ -1,17 +1,5 @@
 <!-- Navigation Bar -->
-<div class="main-page-header">
-    <nav class="main-page-navbar">
-        <a href="/">HOME</a>
-        <a href="/see_reservation_page">SEE RESERVATION</a>
-        <a href="/">RESERVE A SEAT</a>
-        <a href="/profile_page">PROFILE</a>
-        <a href="/remove_reservation">RESERVATION DASHBOARD</a>
-        <span class="profile-page-registerlogin"><a href="/login_page">REGISTER/LOGIN</a></span>
-    </nav>
-
-    <h1>NBA STADIUM RESERVATION</h1>
-    <h4>Reserve your seats now to witness your favorite NBA basketball action live!</h4>
-</div>
+{{> header headerClass="main-page-header" navClass="main-page-navbar" title="NBA STADIUM RESERVATION" subtitle="Reserve your seats now to witness your favorite NBA basketball action live!" }}
 
 <div class="main-page-content" id="main-page-content">
     <div class="main-page-stadiumcontainer">
