--- a/ProjectFolder/views/reserve_seat_page.hbs
+++ b/ProjectFolder/views/reserve_seat_page.hbs
@@ -1,18 +1,8 @@
 <body>
     <!-- Navigation Bar -->
-    <div class="reserve-page-header">
-        <nav class="reserve-page-navbar">
-            <a href="/">HOME</a>
-            <a href="/see_reservation_page">SEE RESERVATION</a>
-            <a href="/">RESERVE A SEAT</a>
-            <a href="/profile_page">PROFILE</a>
-            <a href="/remove_reservation">RESERVATION DASHBOARD</a>
-            <span class="profile-page-registerlogin"><a href="/login_page">REGISTER/LOGIN</a></span>
-        </nav>
+   {{> header headerClass="reserve-page-header" navClass="reserve-page-navbar" title="NBA STADIUM RESERVATION" subtitle="Reserve your seats now to witness your favorite NBA basketball action live!" }}
 
-        <h1>NBA STADIUM RESERVATION</h1>
-        <h4>Reserve your seats now to witness your favorite NBA basketball action live!</h4>
-    </div>
+   
     <div class="reserve-container">
         
         <div class="new-date-time-container">
